inserindo novas regras de negocio para notasc e avaliações
