# CodingChallengeAPI/Models/ComentarioAvaliacao.cs
@@ -1,0 +1,13 @@
+﻿namespace CodingChallengeAPI.Models
+{
+    public class ComentarioAvaliacao
+    {
+        public int IdAvaliacao { get; set; }
+
+        public int IdComentario { get; set; }
+
+        public int IdUsuario { get; set; }
+
+        public bool Gostei { get; set; }
+    }
+}
