# CodingChallengeAPI/Models/Nota.cs
@@ -1,0 +1,13 @@
+﻿namespace CodingChallengeAPI.Models
+{
+    public class Nota
+    {
+        public int IdNota { get; set; }
+
+        public string? IdFilme { get; set; }
+
+        public int IdUsuario { get; set; }
+
+        public int ValorNota { get; set; }
+    }
+}
